# realm-eeg

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODEL_CARD.md  NOTICE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: reference.json
docs/: DATASETS.md  DATA_GOVERNANCE.md  FIGURES.md  FIGURE_CONTRACTS.md  FRAMEWORK.md  REPRODUCIBILITY.md  TABLES.md
docs/assets/figure-data/: figure-03-simulated-embedding.csv  figure-04-simulated-eeg-shap.csv  figure-05-illustrative-performance.csv
docs/assets/tables/: table-01-backbone-role-by-stage.csv  table-02-transparency-profile.csv
examples/: README.md
scripts/: generate_figures.py
src/realm_eeg/: __init__.py  __main__.py  adaptation.py  cli.py  config.py  data.py  diagnostics.py  explain.py  losses.py  metrics.py  model.py  preprocessing.py  training.py
tests/: test_config.py  test_data.py  test_diagnostics.py  test_metrics.py  test_model_and_losses.py  test_preprocessing.py  test_training_and_explain.py
